--- a/MVCBlogApp/Views/_ViewImports.cshtml
+++ b/MVCBlogApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MVCBlogApp
 @using MVCBlogApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
