--- a/MVCBlogApp/Views/Home/Index.cshtml
+++ b/MVCBlogApp/Views/Home/Index.cshtml
@@ -15,19 +15,15 @@ ViewData["Title"] = "Blog home page";
 
         <div class="nav-menu">
             <div class="nav-item active">
-                <span class="nav-icon">🏠</span>
+                <span class="nav-icon"><i class="bi bi-house"></i></span>
                 <span>Home</span>
             </div>
-            @*Dodać tutaj kod do obsługi pobierania kategorii*@
-            
-            
-            
             <div class="nav-item">
-                <span class="nav-icon">💻</span>
+                <span class="nav-icon"><i class="bi bi-code"></i></span>
                 <span>Coding</span>
             </div>
             <div class="nav-item">
-                <span class="nav-icon">🧰</span>
+                <span class="nav-icon"><i class="bi bi-backpack"></i></span>
                 <span>Homelab</span>
             </div>
             <div class="nav-item">
