--- a/MVCBlogApp/Views/PostPublishing/Index.cshtml
+++ b/MVCBlogApp/Views/PostPublishing/Index.cshtml
@@ -31,7 +31,7 @@
 
     @if (Model.Posts != null && Model.Posts.Any())
     {
-        <div class="row g-3 style="max-width: 98vw !important;">
+        <div class="row g-3" style="max-width: 98vw !important;">
             @foreach (var post in Model.Posts)
             {
                 <div class="col-md-6 col-lg-4 col-xl-3">
